--- a/public/css/admin/capital_branch.css
+++ b/public/css/admin/capital_branch.css
@@ -21,6 +21,19 @@
   /* margin-bottom: 20px; */
   transition: all 0.2s ease-out;
 }
+
+.filter-section button{
+  background-color: #03A9F4;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 16px;
+  min-width: 100px;
+  margin-bottom: 20px;
+}
 .button:hover {
   border-color: #999;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
