--- a/public/css/admin/users.css
+++ b/public/css/admin/users.css
@@ -791,3 +791,16 @@ input[type=submit]:hover {
       font-size: 12px;
     }
   }
+
+  .filter-section button{
+    background-color: #03A9F4;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 16px;
+    min-width: 100px;
+    margin-bottom: 20px;
+  }
