--- a/public/css/courier/document_delivery.css
+++ b/public/css/courier/document_delivery.css
@@ -43,6 +43,24 @@
     margin-bottom: 20px;
 }
 
+.filter-section button{
+  background-color: #03A9F4;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 16px;
+  min-width: 100px;
+  margin-bottom: 20px;
+}
+
+.alert ul li {
+  list-style-type: none;
+  color: red;
+}
+
 .overlay {
   position: absolute;
   top: 0;
